fix: aligning svg of price sorting

--- a/src/components/SortMenu/SortMenu.module.scss
+++ b/src/components/SortMenu/SortMenu.module.scss
@@ -31,16 +31,18 @@
       .price {
         display: flex;
         flex-direction: row;
-        align-items: center;
+        // align-items: center;
 
         svg {
           transform: rotate(-90deg);
           margin-left: 4px;
-          margin-top: -6px;
+          margin-top: -2px;
 
           &.ascend {
             transform: rotate(90deg);
-            margin-left: -1px;
+            margin-top: 2px;
+            margin-left: -2px;
+            margin-right: 6px;
           }
         }
       }
